testdata/invalid/invalid_nested_union.bop
union U1 {
    1 -> union U2 {
        1 -> struct S1 { string s; }
    }
}